<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:scrollbars="vertical"
        tools:context=".MainActivity"

        >

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_size"
            android:scaleType="centerCrop"


            android:src="@drawable/photo"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_50dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginBottom="@dimen/_16dp"
            android:orientation="vertical"

            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16dp"
                android:orientation="horizontal"

                >

                <ImageView
                    android:layout_width="@dimen/_28pd"
                    android:layout_height="@dimen/_28pd"
                    android:src="@mipmap/ic_launcher_round" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_28pd"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginLeft="@dimen/_8dp"
                    android:text="@string/junior"
                    android:textSize="@dimen/text_size" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_28pd"
                    android:layout_height="@dimen/_28pd"
                    android:src="@mipmap/ic_launcher_round" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_28pd"
                    android:layout_marginStart="@dimen/_8dp"
                    android:text="@string/education"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginBottom="@dimen/_16dp"
                android:background="@color/red" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textSize="@dimen/text_size"

                />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginBottom="@dimen/_16dp"
                android:background="@color/red" />

            <EditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:focusable="auto"
                android:hint="@string/enter_a_message"


                />

            <TextView
                android:id="@+id/message_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/white"
                android:clickable="true"
                android:padding="16dp"
                android:text="@string/send_message"
                android:textColor="@color/red"


                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"

            >

            <ImageView
                android:id="@+id/telegram"
                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_30dp"
                android:layout_marginRight="@dimen/_16dp"
                android:clickable="true"
                android:src="@drawable/telegram"


                />

            <ImageView
                android:id="@+id/vkontakte"
                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_30dp"
                android:layout_marginRight="@dimen/_16dp"
                android:src="@drawable/vkontakte"


                />

            <ImageView
                android:id="@+id/instagram"
                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_30dp"
                android:src="@drawable/instagram"

                />
        </LinearLayout>


    </LinearLayout>
</ScrollView>
